--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -17,8 +17,8 @@ labels-global:
     - &text_visible_trunk_primary_e   true
     - &text_visible_secondary         true
     - &text_visible_secondary_e       true
-    - &text_visible_tertiary          false
-    - &text_visible_tertiary_e        false
+    - &text_visible_tertiary          true
+    - &text_visible_tertiary_e        true
     - &text_visible_minor_road        false
     - &text_visible_minor_road_e      false
     - &text_visible_service_road      false
@@ -1541,7 +1541,8 @@ layers:
                             text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name } }
                             font:
                                 # need a fill color here?
-                                size: 18px
+                                fill: [0.15,0.15,0.15]
+                                size: 16px
             tertiary:
                 filter: { highway: [tertiary, tertiary_link] }
                 draw:
@@ -1610,19 +1611,30 @@ layers:
                             lines:
                                 outline:
                                     color: pink
-                labels-tertiary:
-                    filter: { $zoom: { min: 14, max: 15 } }
+                labels-tertiary-z14:
+                    filter: { $zoom: [14] }
                     draw:
                         text:
                             priority: 5
                             visible: *text_visible_tertiary_e
                             text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
                             font:
-                                fill: [0.35,0.35,0.35]
+                                fill: [0.5,0.5,0.5]
+                                size: 9px
+                                stroke: { color: *text_stroke, width: 2 }
+                labels-tertiary-z15:
+                    filter: { $zoom: [15] }
+                    draw:
+                        text:
+                            priority: 5
+                            visible: *text_visible_tertiary
+                            text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
+                            font:
+                                fill: [0.3,0.3,0.3]
                                 size: 10px
-                                # stroke: { color: *text_stroke, width: 4 }
+                                stroke: { color: [0.95,0.95,0.95], width: 2 }
                 labels-tertiary2:
-                    filter: { $zoom: { min: 15, max: 18 } }
+                    filter: { $zoom: { min: 16, max: 18 } }
                     draw:
                         text:
                             priority: 5
@@ -1641,8 +1653,9 @@ layers:
                             text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
                             font:
                                 # need a fill color?
-                                size: 15px
-                                stroke: { color: *major_road1, width: 4 }
+                                fill: [0.15,0.15,0.15]
+                                size: 14px
+                                # stroke: { color: *major_road1, width: 4 }
         minor_road:
             filter: { kind: minor_road, not: { highway: service, aeroway: [runway, taxiway] } }
             draw:
