--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -894,7 +894,7 @@ layers:
             lines:
                 color: 'purple'
                 order: 50
-                width: 5
+                width: [[0,2.5px],[8,3px],[9,3.5px],[10,4px],[11,5px],[16,8m]]
     find_me:
         data: { source: find_me }
         draw:
